Fix scrolling bug on Safari, bigger close button
Iphone Safari in landscape mode was unable to scroll to the
bottom of ImageView and text was cut off. May be related to
browser toolbar taking up some page height. Fixed by adding
vertical margins around ImageView content.

Made ImageView close button easier to press while keeping the
'X' outside the image by adding extra `padding-left` and
`padding-bottom`.

Slightly reduced overlay opacity.

--- a/frontend/src/scss/components/_image-view.scss
+++ b/frontend/src/scss/components/_image-view.scss
@@ -11,6 +11,7 @@
     background-color: $viewport-bg;
     color: $post-text-color;
     padding: 2em;
+    margin: 2em auto 6em;
     max-width: $max-image-width;
     line-height: initial;
 
@@ -37,7 +38,7 @@
 
       .fa {
         opacity: .25;
-        padding: .5em;
+        padding: .5em .5em 1em 1em;
       }
 
       &:hover, &:focus {
