--- a/frontend/src/scss/components/_variables.scss
+++ b/frontend/src/scss/components/_variables.scss
@@ -6,4 +6,4 @@ $post-text-padding: 10px;
 $post-text-bg: #191919;
 $post-text-color: rgba(210, 210, 190, 1);
 
-$mask-opacity: .9;
+$mask-opacity: .85;
